--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -52,5 +52,15 @@
         top: 0;
         right: 0;
     }
+
+    .slidingTextContainer {
+        position: absolute;
+        font-size: 50vh;
+        bottom: -100px;
+        white-space: nowrap;
+        color: #ffffff09;
+        width: 50%;
+        font-weight: bold;
+    }
 }
 
