--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -5,7 +5,7 @@
         position: sticky;
         top: 0;
         left: 0;
-        padding-top: 20px;
+        padding-top: 0px;
         text-align: center;
         color: orange;
         font-size: 32px;
@@ -41,6 +41,7 @@
                     height: 100%;
                     width: 100%;
                     object-fit: cover;
+                    border-radius: 10px;
                 }
             }
 
