--- a/src/components/cursor/cursor.scss
+++ b/src/components/cursor/cursor.scss
@@ -6,7 +6,8 @@
     border-radius: 50%;
     border: 1px solid white;
     position: fixed;
-    z-index: 999;
+    z-index: 1;
+    pointer-events: none;
 
     @include mobile {
         display: none;
