--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -52,6 +52,8 @@
                 margin-right: 20px;
                 cursor: pointer;
                 font-weight: 300;
+                z-index: 9999 !important;
+                position: relative;
             }
         }
 
@@ -71,12 +73,13 @@
             width: 100%;
             top: unset;
             bottom: 0;
+            left: 100px;
         }
 
         img {
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: contain;
         }
     }
 
