--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -25,7 +25,7 @@
         overflow: hidden;
 
         .wrapper {
-            max-width: 1100px;
+            max-width: 95%;
             height: 100%;
             margin: auto;
             display: flex;
@@ -35,12 +35,13 @@
 
             .imageContainer {
                 flex: 1;
-                height: 50%;
+                height: 60%;
+                max-width: 40%;
 
                 img {
                     height: 100%;
                     width: 100%;
-                    object-fit: cover;
+                    object-fit: contain;
                     border-radius: 10px;
                 }
             }
@@ -50,6 +51,7 @@
                 display: flex;
                 flex-direction: column;
                 gap: 30px;
+                max-width: 60%;
 
                 h2 {
                     font-size: 60px;
@@ -60,13 +62,98 @@
                     font-size: 18px;
                 }
 
-                button {
+                a {
                     background-color: orange;
                     border: none;
                     border-radius: 10px;
                     padding: 10px;
+                    color: black;
+                    text-align: center;
                     width: 200px;
                     cursor: pointer;
+                    z-index: 9999 !important;
+                }
+            }
+        }
+    }
+
+    @media (max-width: 1200px) {
+        .wrapper {
+            flex-direction: column !important;
+            gap: 30px !important;
+
+            .imageContainer, .textContainer {
+                width: 100% !important;
+                height: auto !important;
+                max-width: 100% !important;
+            }
+
+            .textContainer {
+                h2 {
+                    font-size: 50px !important;
+                }
+
+                p {
+                    font-size: 16px !important;
+                }
+
+                a {
+                    width: 150px !important;
+                }
+            }
+        }
+    }
+
+    @media (max-width: 768px) {
+        .progress {
+            font-size: 24px !important;
+        }
+
+        .wrapper {
+            gap: 20px !important;
+            padding: 10px !important;
+
+            .imageContainer, .textContainer {
+                width: 100% !important;
+                height: auto !important;
+                max-width: 100% !important;
+            }
+
+            .textContainer {
+                h2 {
+                    font-size: 30px !important;
+                }
+
+                p {
+                    font-size: 14px !important;
+                }
+
+                a {
+                    width: 120px !important;
+                }
+            }
+        }
+    }
+
+    @media (max-width: 480px) {
+        .progress {
+            font-size: 18px !important;
+        }
+
+        .wrapper {
+            gap: 10px !important;
+
+            .textContainer {
+                h2 {
+                    font-size: 16px !important;
+                }
+
+                p {
+                    font-size: 12px !important;
+                }
+
+                a {
+                    width: 120px !important;
                 }
             }
         }
