--- a/src/components/services/services.scss
+++ b/src/components/services/services.scss
@@ -2,22 +2,24 @@
 
 .services {
     background: linear-gradient(180deg, #0c0c1d, #111132);
-    height: 100%;
+    padding: 2rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 
     .textContainer {
         flex: 1;
-        align-self: flex-end;
         display: flex;
         align-items: center;
         gap: 20px;
+        justify-content: end;
 
         @include mobile {
-            align-self: center;
-            text-align: center;
             flex-direction: column;
+            text-align: center;
+            align-items: center;
+            gap: 10px;
+            margin-bottom: 10px;
         }
 
         p {
@@ -25,6 +27,11 @@
             font-size: 20px;
             color: gray;
             text-align: right;
+
+            @include mobile {
+                text-align: center;
+                font-size: 18px;
+            }
         }
 
         hr {
@@ -33,7 +40,7 @@
             border-top: 0.5px solid gray;
 
             @include mobile {
-                width: 300px;
+                width: 200px;
             }
         }
     }
@@ -43,6 +50,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        gap: 1rem;
 
         @include mobile {
             width: 100%;
@@ -55,8 +63,8 @@
 
             @include mobile {
                 gap: 20px;
-                text-align: center;
                 flex-direction: column;
+                text-align: center;
             }
 
             img {
@@ -70,13 +78,18 @@
                     height: 70px;
                 }
             }
-            
+
             h1 {
-                font-size: 80px;
+                font-size: 70px;
                 font-weight: 100;
+                color: #fff;
 
                 @include mobile {
                     font-size: 36px;
+                }
+
+                b {
+                    color: orange;
                 }
             }
 
@@ -87,6 +100,7 @@
                 background-color: orange;
                 border: none;
                 font-size: 24px;
+                color: #fff;
                 cursor: pointer;
 
                 @include mobile {
@@ -103,27 +117,45 @@
         display: flex;
         max-width: 1100px;
         margin: auto;
+        gap: 1rem;
 
         @include mobile {
-            width: 100%;
             flex-direction: column;
+            width: 100%;
+            margin-top: 20px;
         }
 
         .box {
-            padding: 50px;
+            padding: 20px;
             border: 0.5px solid gray;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            text-align: left;
+            background-color: #1a1a2e;
+            border-radius: 10px;
+            color: #fff;
 
             @include mobile {
-                border: none;
                 align-items: center;
-                gap: 20px;
+                text-align: center;
                 padding: 10px;
+                gap: 20px;
+            }
+
+            h2 {
+                font-size: 24px;
+                margin-bottom: 10px;
+
+                @include mobile {
+                    font-size: 20px;
+                }
             }
 
             p {
+                font-size: 16px;
+                color: gray;
+
                 @include mobile {
                     display: none;
                 }
@@ -133,14 +165,15 @@
                 padding: 10px;
                 background-color: orange;
                 border: none;
+                color: #fff;
+                font-weight: bold;
                 cursor: pointer;
+                border-radius: 5px;
 
                 @include mobile {
-                    width: 40%;
+                    width: 60%;
                 }
             }
         }
-        
     }
-
 }
